--- a/examples/resources/views/welcome.hbs
+++ b/examples/resources/views/welcome.hbs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title %></title>
+    <title>{{title}}</title>
     <style>
         * {
             margin: 0;
@@ -39,13 +39,13 @@
 </head>
 <body>
     <div class="container">
-        <h1><%= title %></h1>
+        <h1>{{title}}</h1>
         <p style="text-align: center; color: #666; margin-bottom: 20px;">
             Framework MVC inspirado en Laravel con NodeWire (similar a Livewire)
         </p>
         
         <div class="component-demo">
-            <%- include('components/counter', { component: counterComponent }) %>
+            {{> components/counter component=counterComponent}}
         </div>
     </div>
 
