--- a/examples/resources/views/welcome.hbs
+++ b/examples/resources/views/welcome.hbs
@@ -4,6 +4,6 @@
 </p>
 
 <div class="component-demo">
-    {{> components/counter component=counterComponent}}
+    {{@component "counterComponent"}}
 </div>
 
