feat: add template view

--- a/examples/resources/views/layouts/app.hbs
+++ b/examples/resources/views/layouts/app.hbs
@@ -65,7 +65,7 @@
     {{!-- El contenido de la sección se renderiza dentro del contenedor --}}
     <header class="header">
         <div class="header-content">
-            {{#@section "header"}}{{/@section}}
+            {{#@section "header"}}test{{/@section}}
         </div>
     </header>
     
